# books

./: .gitignore  Gemfile  README.md  _artifact  _config.yml  books_cache.json  build.sh  embeddings.json  embeddings.py  gethighlights.py  google-books-data.py  index.markdown  live-embeddings.py  manifest.json  netlify.toml  other.md  package-lock.json  package.json  plot.md  plotly-out.html  pyproject.toml  queryembeddings.py  requirements.txt  search.md  sheet.csv  square-plot.html  tags.md  test_multilingual.py  upload.md  workbox-config.js
_books/: 9780316769532.md  9780465026562.md  9780691160147.md  9781984898859.md
_data/: menus.yml
_includes/: footer.html  header-home.html  header.html  ibook-paste.html  lazyload.html  navbar.html  search.html  upload.html
_layouts/: book.html  books-home.html  books-page.html  books-post.html  page.html  post.html
_posts/: 2023-11-10-welcome-to-jekyll.markdown
_sass/: main.scss
_sass/klise/: _base.scss  _dark.scss  _extra.scss
assets/js/: disqus.js  main.js
functions/: search.js
netlify/functions/: search.js
